--- a/packages/bathroom_humidity.yaml
+++ b/packages/bathroom_humidity.yaml
@@ -16,7 +16,7 @@ automation:
   - alias: "Turn on Master Bathroom Fan"
     trigger:
       - platform: state
-        entity_id: sensor.main_bathroom_humidity, sensor.main_bedroom_humidity   # 1st bathroom 2nd main bedroom
+        entity_id: sensor.main_bathroom_humidity, sensor.main_bedroom_humidity   # 1st bathroom 2nd main bedroom 
     condition:
       - condition: template
         value_template: "{{ (states.sensor.main_bathroom_humidity.state|float - states.sensor.main_bedroom_humidity.state|float > 15) or (states.sensor.main_bathroom_humidity.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
@@ -30,7 +30,7 @@ automation:
             state: 'unavailable'
     action:
       - service: light.turn_on
-        entity_id: light.sonoff_master_bathroom_1
+        entity_id: light.main_bathroom
 
   - alias: "Turn off Master Bathroom Fan"
     trigger:
@@ -41,10 +41,10 @@ automation:
         minutes: "/10"
     condition:
       - condition: template # bathroom vs main bedroom
-        value_template: "{{states.sensor.main_bathroom_humidity.state|float - states.sensor.main_bedroom_humidity.state|float < 13 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
+        value_template: "{{states.sensor.main_bathroom_humidity.state|float - states.sensor.main_bedroom_humidity.state|float < 13 and states.light.main_bathroom.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
     action:
       - service: light.turn_off
-        entity_id: light.sonoff_master_bathroom_1
+        entity_id: light.main_bathroom
