fix timeout on shelly2.5 for dining+lounge-outside

--- a/packages/shellies_discovery.yaml
+++ b/packages/shellies_discovery.yaml
@@ -94,6 +94,7 @@ automation:
           relay-0-name: "Courtyard Lounge"
           relay-1: "light"
           relay-1-name: "Dining"
+          expire_after: 7200
         shellyswitch25-40F52000F5B7:
           relay-0: "light"
           relay-0-name: "Bar"
