new discory script update change required

--- a/packages/shellies_discovery.yaml
+++ b/packages/shellies_discovery.yaml
@@ -27,7 +27,7 @@ automation:
         mac: '{{ trigger.payload_json.mac }}'
         fw_ver: '{{ trigger.payload_json.fw_ver }}'
         model: '{{ trigger.payload_json.model }}'
-        mode: '{{ trigger.payload_json.mode }}'
+        mode: '{{ trigger.payload_json.mode | default }}'
         discovery_prefix: 'homeassistant'
         qos: 2
         # Dimmers
