--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -16,69 +16,69 @@
 #   |_|\___|_| |_| |_| .__/|_|\__,_|\__\___|  |___/\___|_| |_|___/\___/|_|  |___/
 #                    |_|
 
-### Sureflap Jessie
-- platform: history_stats
-  name: Jessie outside time (today)
-  entity_id: binary_sensor.pet_jessie
-  state: 'off'
-  type: time
-  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  end: '{{ now() }}'
-- platform: history_stats
-  name: Jessie trips outside (today)
-  entity_id: binary_sensor.pet_jessie
-  state: 'off'
-  type: count
-  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  end: '{{ now() }}'
-- platform: history_stats
-  name: Jessie outside (yesterday)
-  entity_id: binary_sensor.pet_jessie
-  state: 'off'
-  type: time
-  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  duration:
-    hours: 24
-- platform: history_stats
-  name: Jessie trips outside (yesterday)
-  entity_id: binary_sensor.pet_jessie
-  state: 'off'
-  type: count
-  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  duration:
-    hours: 24
-### Sureflap Ziva
-- platform: history_stats
-  name: Ziva outside time (today)
-  entity_id: binary_sensor.pet_ziva
-  state: 'off'
-  type: time
-  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  end: '{{ now() }}'
-- platform: history_stats
-  name: Ziva trips outside (today)
-  entity_id: binary_sensor.pet_ziva
-  state: 'off'
-  type: count
-  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  end: '{{ now() }}'
-- platform: history_stats
-  name: Ziva outside (yesterday)
-  entity_id: binary_sensor.pet_ziva
-  state: 'off'
-  type: time
-  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  duration:
-    hours: 24
-- platform: history_stats
-  name: Ziva trips outside (yesterday)
-  entity_id: binary_sensor.pet_ziva
-  state: 'off'
-  type: count
-  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
-  duration:
-    hours: 24
-### Sureflap end
+#### Sureflap Jessie
+#- platform: history_stats
+#  name: Jessie outside time (today)
+#  entity_id: binary_sensor.pet_jessie
+#  state: 'off'
+#  type: time
+#  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  end: '{{ now() }}'
+#- platform: history_stats
+#  name: Jessie trips outside (today)
+#  entity_id: binary_sensor.pet_jessie
+#  state: 'off'
+#  type: count
+#  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  end: '{{ now() }}'
+#- platform: history_stats
+#  name: Jessie outside (yesterday)
+#  entity_id: binary_sensor.pet_jessie
+#  state: 'off'
+#  type: time
+#  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  duration:
+#    hours: 24
+#- platform: history_stats
+#  name: Jessie trips outside (yesterday)
+#  entity_id: binary_sensor.pet_jessie
+#  state: 'off'
+#  type: count
+#  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  duration:
+#    hours: 24
+#### Sureflap Ziva
+#- platform: history_stats
+#  name: Ziva outside time (today)
+#  entity_id: binary_sensor.pet_ziva
+#  state: 'off'
+#  type: time
+#  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  end: '{{ now() }}'
+#- platform: history_stats
+#  name: Ziva trips outside (today)
+#  entity_id: binary_sensor.pet_ziva
+#  state: 'off'
+#  type: count
+#  start: '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  end: '{{ now() }}'
+#- platform: history_stats
+#  name: Ziva outside (yesterday)
+#  entity_id: binary_sensor.pet_ziva
+#  state: 'off'
+#  type: time
+#  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  duration:
+#    hours: 24
+#- platform: history_stats
+#  name: Ziva trips outside (yesterday)
+#  entity_id: binary_sensor.pet_ziva
+#  state: 'off'
+#  type: count
+#  end : '{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}'
+#  duration:
+#    hours: 24
+#### Sureflap end
 
 - platform: time_date
   display_options:
