--- a/packages/shellies_auto_update.yaml
+++ b/packages/shellies_auto_update.yaml
@@ -7,6 +7,7 @@ rest_command:
 automation:
   - alias: "Shelly New Firmware Update"
     id: 'snfn'
+    mode: parallel
     trigger:
       platform: mqtt
       topic: shellies/announce
@@ -47,6 +48,7 @@ automation:
 
   - alias: "Shelly New Firmware Notification Removal"
     id: 'snfnr'
+    mode: parallel
     trigger:
       platform: mqtt
       topic: shellies/announce
