--- a/packages/switch_triggers.yaml
+++ b/packages/switch_triggers.yaml
@@ -3,6 +3,12 @@ group:
     name: Feeds off while sleeping
     entities:
       - switch.office_feed_1
+      - switch.office_feed_2
+
+  feeds_off_while_sleeping_without_auto_turn_on:
+    name: Feeds off while sleeping
+    entities:
+      - switch.bar_media_feed
 
 automation:
   ### Turn off feeds when Alarm is armed
@@ -19,6 +25,7 @@ automation:
       - service: switch.turn_off
         entity_id: 
           - group.feeds_off_while_sleeping
+          - group.feeds_off_while_sleeping_without_auto_turn_on
 
   ### Turn on feeds when Alarm is disarmed
   - alias: Turn on feeds when Alarm is armed
